--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version> <!-- Or the latest version -->
+        </dependency>
+
 
     </dependencies>
 
